add person update endpoint
